feat: big update on README file
small update on dockerfile and docker compose